// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Symbol(AVATAR) page correctly 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="center-column"
    >
      <div
        data-testid="page-background"
        style="position: absolute; z-index: -1; left: 0px; top: 0px; bottom: 0px; right: 0px; background-color: rgb(130, 49, 35);"
      >
        <h1
          style="position: relative; top: 50%; transform: translateY(-50%); text-align: center; opacity: 1;"
        />
      </div>
      <div
        class="active-content"
        style="opacity: 1; color: rgb(255, 255, 255); transform: translate(0, -5vh);"
      >
        <h1>
          Majid Razvi
        </h1>
        <h3>
          ❤️ Denver, CO
        </h3>
      </div>
      <div
        class="main-menu"
      >
        <img
          alt="About Me"
          class="menu-icon"
          src="/avatar.jpg"
          style="opacity: 1; cursor: grab; z-index: 1; transform: translate(0, -5vh); box-shadow: 0 0 0vh 0vh rgb(20, 12, 14);"
        />
        <img
          alt="VCU"
          class="menu-icon"
          src="/vcu.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="Sage"
          class="menu-icon"
          src="/sage.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="Pivotal"
          class="menu-icon"
          src="/pivotal.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="VMware"
          class="menu-icon"
          src="/vmware.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
      </div>
      <div
        class="social-media"
      >
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="twitter"
            class="social-icon"
            href="https://www.twitter.com/majidrazvi"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #00aced;"
                >
                  <path
                    d="M0,0v64h64V0H0z M44.7,25.5c0,0.3,0,0.6,0,0.8C44.7,35,38.1,45,26.1,45c-3.7,0-7.2-1.1-10.1-2.9 c0.5,0.1,1,0.1,1.6,0.1c3.1,0,5.9-1,8.2-2.8c-2.9-0.1-5.3-2-6.1-4.6c0.4,0.1,0.8,0.1,1.2,0.1c0.6,0,1.2-0.1,1.7-0.2 c-3-0.6-5.3-3.3-5.3-6.4c0,0,0-0.1,0-0.1c0.9,0.5,1.9,0.8,3,0.8c-1.8-1.2-2.9-3.2-2.9-5.5c0-1.2,0.3-2.3,0.9-3.3 c3.2,4,8.1,6.6,13.5,6.9c-0.1-0.5-0.2-1-0.2-1.5c0-3.6,2.9-6.6,6.6-6.6c1.9,0,3.6,0.8,4.8,2.1c1.5-0.3,2.9-0.8,4.2-1.6 c-0.5,1.5-1.5,2.8-2.9,3.6c1.3-0.2,2.6-0.5,3.8-1C47.1,23.4,46,24.5,44.7,25.5z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="linkedin"
            class="social-icon"
            href="https://www.linkedin.com/in/majidrazvi"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M20.4,44h5.4V26.6h-5.4V44z M23.1,18c-1.7,0-3.1,1.4-3.1,3.1c0,1.7,1.4,3.1,3.1,3.1 c1.7,0,3.1-1.4,3.1-3.1C26.2,19.4,24.8,18,23.1,18z M39.5,26.2c-2.6,0-4.4,1.4-5.1,2.8h-0.1v-2.4h-5.2V44h5.4v-8.6 c0-2.3,0.4-4.5,3.2-4.5c2.8,0,2.8,2.6,2.8,4.6V44H46v-9.5C46,29.8,45,26.2,39.5,26.2z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #007fb1;"
                >
                  <path
                    d="M0,0v64h64V0H0z M25.8,44h-5.4V26.6h5.4V44z M23.1,24.3c-1.7,0-3.1-1.4-3.1-3.1c0-1.7,1.4-3.1,3.1-3.1 c1.7,0,3.1,1.4,3.1,3.1C26.2,22.9,24.8,24.3,23.1,24.3z M46,44h-5.4v-8.4c0-2,0-4.6-2.8-4.6c-2.8,0-3.2,2.2-3.2,4.5V44h-5.4V26.6 h5.2V29h0.1c0.7-1.4,2.5-2.8,5.1-2.8c5.5,0,6.5,3.6,6.5,8.3V44z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="github"
            class="social-icon"
            href="https://github.com/majidmade/majidmade.com/tree/master/src"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M32,16c-8.8,0-16,7.2-16,16c0,7.1,4.6,13.1,10.9,15.2 c0.8,0.1,1.1-0.3,1.1-0.8c0-0.4,0-1.4,0-2.7c-4.5,1-5.4-2.1-5.4-2.1c-0.7-1.8-1.8-2.3-1.8-2.3c-1.5-1,0.1-1,0.1-1 c1.6,0.1,2.5,1.6,2.5,1.6c1.4,2.4,3.7,1.7,4.7,1.3c0.1-1,0.6-1.7,1-2.1c-3.6-0.4-7.3-1.8-7.3-7.9c0-1.7,0.6-3.2,1.6-4.3 c-0.2-0.4-0.7-2,0.2-4.2c0,0,1.3-0.4,4.4,1.6c1.3-0.4,2.6-0.5,4-0.5c1.4,0,2.7,0.2,4,0.5c3.1-2.1,4.4-1.6,4.4-1.6 c0.9,2.2,0.3,3.8,0.2,4.2c1,1.1,1.6,2.5,1.6,4.3c0,6.1-3.7,7.5-7.3,7.9c0.6,0.5,1.1,1.5,1.1,3c0,2.1,0,3.9,0,4.4 c0,0.4,0.3,0.9,1.1,0.8C43.4,45.1,48,39.1,48,32C48,23.2,40.8,16,32,16z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #4183c4;"
                >
                  <path
                    d="M0,0v64h64V0H0z M37.1,47.2c-0.8,0.2-1.1-0.3-1.1-0.8c0-0.5,0-2.3,0-4.4c0-1.5-0.5-2.5-1.1-3 c3.6-0.4,7.3-1.7,7.3-7.9c0-1.7-0.6-3.2-1.6-4.3c0.2-0.4,0.7-2-0.2-4.2c0,0-1.3-0.4-4.4,1.6c-1.3-0.4-2.6-0.5-4-0.5 c-1.4,0-2.7,0.2-4,0.5c-3.1-2.1-4.4-1.6-4.4-1.6c-0.9,2.2-0.3,3.8-0.2,4.2c-1,1.1-1.6,2.5-1.6,4.3c0,6.1,3.7,7.5,7.3,7.9 c-0.5,0.4-0.9,1.1-1,2.1c-0.9,0.4-3.2,1.1-4.7-1.3c0,0-0.8-1.5-2.5-1.6c0,0-1.6,0-0.1,1c0,0,1,0.5,1.8,2.3c0,0,0.9,3.1,5.4,2.1 c0,1.3,0,2.3,0,2.7c0,0.4-0.3,0.9-1.1,0.8C20.6,45.1,16,39.1,16,32c0-8.8,7.2-16,16-16c8.8,0,16,7.2,16,16 C48,39.1,43.4,45.1,37.1,47.2z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the Symbol(PIVOTAL) page correctly 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="center-column"
    >
      <div
        data-testid="page-background"
        style="position: absolute; z-index: -1; left: 0px; top: 0px; bottom: 0px; right: 0px; background-color: rgb(178, 241, 232);"
      >
        <h1
          style="position: relative; top: 50%; transform: translateY(-50%); text-align: center; opacity: 1;"
        />
      </div>
      <div
        class="active-content"
        style="opacity: 1; color: rgb(0, 0, 0); transform: translate(0, -5vh);"
      >
        <h1>
          Pivotal
        </h1>
        <h3>
          ☁️ Software Engineer
        </h3>
      </div>
      <div
        class="main-menu"
      >
        <img
          alt="About Me"
          class="menu-icon"
          src="/avatar.jpg"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="VCU"
          class="menu-icon"
          src="/vcu.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="Sage"
          class="menu-icon"
          src="/sage.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="Pivotal"
          class="menu-icon"
          src="/pivotal.png"
          style="opacity: 1; cursor: grab; z-index: 1; transform: translate(0, -5vh); box-shadow: 0 0 0vh 0vh rgb(22, 169, 144);"
        />
        <img
          alt="VMware"
          class="menu-icon"
          src="/vmware.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
      </div>
      <div
        class="social-media"
      >
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="twitter"
            class="social-icon"
            href="https://www.twitter.com/majidrazvi"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #00aced;"
                >
                  <path
                    d="M0,0v64h64V0H0z M44.7,25.5c0,0.3,0,0.6,0,0.8C44.7,35,38.1,45,26.1,45c-3.7,0-7.2-1.1-10.1-2.9 c0.5,0.1,1,0.1,1.6,0.1c3.1,0,5.9-1,8.2-2.8c-2.9-0.1-5.3-2-6.1-4.6c0.4,0.1,0.8,0.1,1.2,0.1c0.6,0,1.2-0.1,1.7-0.2 c-3-0.6-5.3-3.3-5.3-6.4c0,0,0-0.1,0-0.1c0.9,0.5,1.9,0.8,3,0.8c-1.8-1.2-2.9-3.2-2.9-5.5c0-1.2,0.3-2.3,0.9-3.3 c3.2,4,8.1,6.6,13.5,6.9c-0.1-0.5-0.2-1-0.2-1.5c0-3.6,2.9-6.6,6.6-6.6c1.9,0,3.6,0.8,4.8,2.1c1.5-0.3,2.9-0.8,4.2-1.6 c-0.5,1.5-1.5,2.8-2.9,3.6c1.3-0.2,2.6-0.5,3.8-1C47.1,23.4,46,24.5,44.7,25.5z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="linkedin"
            class="social-icon"
            href="https://www.linkedin.com/in/majidrazvi"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M20.4,44h5.4V26.6h-5.4V44z M23.1,18c-1.7,0-3.1,1.4-3.1,3.1c0,1.7,1.4,3.1,3.1,3.1 c1.7,0,3.1-1.4,3.1-3.1C26.2,19.4,24.8,18,23.1,18z M39.5,26.2c-2.6,0-4.4,1.4-5.1,2.8h-0.1v-2.4h-5.2V44h5.4v-8.6 c0-2.3,0.4-4.5,3.2-4.5c2.8,0,2.8,2.6,2.8,4.6V44H46v-9.5C46,29.8,45,26.2,39.5,26.2z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #007fb1;"
                >
                  <path
                    d="M0,0v64h64V0H0z M25.8,44h-5.4V26.6h5.4V44z M23.1,24.3c-1.7,0-3.1-1.4-3.1-3.1c0-1.7,1.4-3.1,3.1-3.1 c1.7,0,3.1,1.4,3.1,3.1C26.2,22.9,24.8,24.3,23.1,24.3z M46,44h-5.4v-8.4c0-2,0-4.6-2.8-4.6c-2.8,0-3.2,2.2-3.2,4.5V44h-5.4V26.6 h5.2V29h0.1c0.7-1.4,2.5-2.8,5.1-2.8c5.5,0,6.5,3.6,6.5,8.3V44z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="github"
            class="social-icon"
            href="https://github.com/majidmade/majidmade.com/tree/master/src"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M32,16c-8.8,0-16,7.2-16,16c0,7.1,4.6,13.1,10.9,15.2 c0.8,0.1,1.1-0.3,1.1-0.8c0-0.4,0-1.4,0-2.7c-4.5,1-5.4-2.1-5.4-2.1c-0.7-1.8-1.8-2.3-1.8-2.3c-1.5-1,0.1-1,0.1-1 c1.6,0.1,2.5,1.6,2.5,1.6c1.4,2.4,3.7,1.7,4.7,1.3c0.1-1,0.6-1.7,1-2.1c-3.6-0.4-7.3-1.8-7.3-7.9c0-1.7,0.6-3.2,1.6-4.3 c-0.2-0.4-0.7-2,0.2-4.2c0,0,1.3-0.4,4.4,1.6c1.3-0.4,2.6-0.5,4-0.5c1.4,0,2.7,0.2,4,0.5c3.1-2.1,4.4-1.6,4.4-1.6 c0.9,2.2,0.3,3.8,0.2,4.2c1,1.1,1.6,2.5,1.6,4.3c0,6.1-3.7,7.5-7.3,7.9c0.6,0.5,1.1,1.5,1.1,3c0,2.1,0,3.9,0,4.4 c0,0.4,0.3,0.9,1.1,0.8C43.4,45.1,48,39.1,48,32C48,23.2,40.8,16,32,16z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #4183c4;"
                >
                  <path
                    d="M0,0v64h64V0H0z M37.1,47.2c-0.8,0.2-1.1-0.3-1.1-0.8c0-0.5,0-2.3,0-4.4c0-1.5-0.5-2.5-1.1-3 c3.6-0.4,7.3-1.7,7.3-7.9c0-1.7-0.6-3.2-1.6-4.3c0.2-0.4,0.7-2-0.2-4.2c0,0-1.3-0.4-4.4,1.6c-1.3-0.4-2.6-0.5-4-0.5 c-1.4,0-2.7,0.2-4,0.5c-3.1-2.1-4.4-1.6-4.4-1.6c-0.9,2.2-0.3,3.8-0.2,4.2c-1,1.1-1.6,2.5-1.6,4.3c0,6.1,3.7,7.5,7.3,7.9 c-0.5,0.4-0.9,1.1-1,2.1c-0.9,0.4-3.2,1.1-4.7-1.3c0,0-0.8-1.5-2.5-1.6c0,0-1.6,0-0.1,1c0,0,1,0.5,1.8,2.3c0,0,0.9,3.1,5.4,2.1 c0,1.3,0,2.3,0,2.7c0,0.4-0.3,0.9-1.1,0.8C20.6,45.1,16,39.1,16,32c0-8.8,7.2-16,16-16c8.8,0,16,7.2,16,16 C48,39.1,43.4,45.1,37.1,47.2z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the Symbol(SAGE) page correctly 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="center-column"
    >
      <div
        data-testid="page-background"
        style="position: absolute; z-index: -1; left: 0px; top: 0px; bottom: 0px; right: 0px; background-color: rgb(3, 38, 56);"
      >
        <h1
          style="position: relative; top: 50%; transform: translateY(-50%); text-align: center; opacity: 1;"
        />
      </div>
      <div
        class="active-content"
        style="opacity: 1; color: rgb(255, 255, 255); transform: translate(0, -5vh);"
      >
        <h1>
          Sage
        </h1>
        <h3>
          💸 Software Engineer
        </h3>
      </div>
      <div
        class="main-menu"
      >
        <img
          alt="About Me"
          class="menu-icon"
          src="/avatar.jpg"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="VCU"
          class="menu-icon"
          src="/vcu.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="Sage"
          class="menu-icon"
          src="/sage.png"
          style="opacity: 1; cursor: grab; z-index: 1; transform: translate(0, -5vh); box-shadow: 0 0 0vh 0vh rgb(29, 218, 9);"
        />
        <img
          alt="Pivotal"
          class="menu-icon"
          src="/pivotal.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="VMware"
          class="menu-icon"
          src="/vmware.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
      </div>
      <div
        class="social-media"
      >
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="twitter"
            class="social-icon"
            href="https://www.twitter.com/majidrazvi"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #00aced;"
                >
                  <path
                    d="M0,0v64h64V0H0z M44.7,25.5c0,0.3,0,0.6,0,0.8C44.7,35,38.1,45,26.1,45c-3.7,0-7.2-1.1-10.1-2.9 c0.5,0.1,1,0.1,1.6,0.1c3.1,0,5.9-1,8.2-2.8c-2.9-0.1-5.3-2-6.1-4.6c0.4,0.1,0.8,0.1,1.2,0.1c0.6,0,1.2-0.1,1.7-0.2 c-3-0.6-5.3-3.3-5.3-6.4c0,0,0-0.1,0-0.1c0.9,0.5,1.9,0.8,3,0.8c-1.8-1.2-2.9-3.2-2.9-5.5c0-1.2,0.3-2.3,0.9-3.3 c3.2,4,8.1,6.6,13.5,6.9c-0.1-0.5-0.2-1-0.2-1.5c0-3.6,2.9-6.6,6.6-6.6c1.9,0,3.6,0.8,4.8,2.1c1.5-0.3,2.9-0.8,4.2-1.6 c-0.5,1.5-1.5,2.8-2.9,3.6c1.3-0.2,2.6-0.5,3.8-1C47.1,23.4,46,24.5,44.7,25.5z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="linkedin"
            class="social-icon"
            href="https://www.linkedin.com/in/majidrazvi"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M20.4,44h5.4V26.6h-5.4V44z M23.1,18c-1.7,0-3.1,1.4-3.1,3.1c0,1.7,1.4,3.1,3.1,3.1 c1.7,0,3.1-1.4,3.1-3.1C26.2,19.4,24.8,18,23.1,18z M39.5,26.2c-2.6,0-4.4,1.4-5.1,2.8h-0.1v-2.4h-5.2V44h5.4v-8.6 c0-2.3,0.4-4.5,3.2-4.5c2.8,0,2.8,2.6,2.8,4.6V44H46v-9.5C46,29.8,45,26.2,39.5,26.2z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #007fb1;"
                >
                  <path
                    d="M0,0v64h64V0H0z M25.8,44h-5.4V26.6h5.4V44z M23.1,24.3c-1.7,0-3.1-1.4-3.1-3.1c0-1.7,1.4-3.1,3.1-3.1 c1.7,0,3.1,1.4,3.1,3.1C26.2,22.9,24.8,24.3,23.1,24.3z M46,44h-5.4v-8.4c0-2,0-4.6-2.8-4.6c-2.8,0-3.2,2.2-3.2,4.5V44h-5.4V26.6 h5.2V29h0.1c0.7-1.4,2.5-2.8,5.1-2.8c5.5,0,6.5,3.6,6.5,8.3V44z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="github"
            class="social-icon"
            href="https://github.com/majidmade/majidmade.com/tree/master/src"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M32,16c-8.8,0-16,7.2-16,16c0,7.1,4.6,13.1,10.9,15.2 c0.8,0.1,1.1-0.3,1.1-0.8c0-0.4,0-1.4,0-2.7c-4.5,1-5.4-2.1-5.4-2.1c-0.7-1.8-1.8-2.3-1.8-2.3c-1.5-1,0.1-1,0.1-1 c1.6,0.1,2.5,1.6,2.5,1.6c1.4,2.4,3.7,1.7,4.7,1.3c0.1-1,0.6-1.7,1-2.1c-3.6-0.4-7.3-1.8-7.3-7.9c0-1.7,0.6-3.2,1.6-4.3 c-0.2-0.4-0.7-2,0.2-4.2c0,0,1.3-0.4,4.4,1.6c1.3-0.4,2.6-0.5,4-0.5c1.4,0,2.7,0.2,4,0.5c3.1-2.1,4.4-1.6,4.4-1.6 c0.9,2.2,0.3,3.8,0.2,4.2c1,1.1,1.6,2.5,1.6,4.3c0,6.1-3.7,7.5-7.3,7.9c0.6,0.5,1.1,1.5,1.1,3c0,2.1,0,3.9,0,4.4 c0,0.4,0.3,0.9,1.1,0.8C43.4,45.1,48,39.1,48,32C48,23.2,40.8,16,32,16z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #4183c4;"
                >
                  <path
                    d="M0,0v64h64V0H0z M37.1,47.2c-0.8,0.2-1.1-0.3-1.1-0.8c0-0.5,0-2.3,0-4.4c0-1.5-0.5-2.5-1.1-3 c3.6-0.4,7.3-1.7,7.3-7.9c0-1.7-0.6-3.2-1.6-4.3c0.2-0.4,0.7-2-0.2-4.2c0,0-1.3-0.4-4.4,1.6c-1.3-0.4-2.6-0.5-4-0.5 c-1.4,0-2.7,0.2-4,0.5c-3.1-2.1-4.4-1.6-4.4-1.6c-0.9,2.2-0.3,3.8-0.2,4.2c-1,1.1-1.6,2.5-1.6,4.3c0,6.1,3.7,7.5,7.3,7.9 c-0.5,0.4-0.9,1.1-1,2.1c-0.9,0.4-3.2,1.1-4.7-1.3c0,0-0.8-1.5-2.5-1.6c0,0-1.6,0-0.1,1c0,0,1,0.5,1.8,2.3c0,0,0.9,3.1,5.4,2.1 c0,1.3,0,2.3,0,2.7c0,0.4-0.3,0.9-1.1,0.8C20.6,45.1,16,39.1,16,32c0-8.8,7.2-16,16-16c8.8,0,16,7.2,16,16 C48,39.1,43.4,45.1,37.1,47.2z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the Symbol(VCU) page correctly 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="center-column"
    >
      <div
        data-testid="page-background"
        style="position: absolute; z-index: -1; left: 0px; top: 0px; bottom: 0px; right: 0px; background-color: rgb(252, 171, 18);"
      >
        <h1
          style="position: relative; top: 50%; transform: translateY(-50%); text-align: center; opacity: 1;"
        />
      </div>
      <div
        class="active-content"
        style="opacity: 1; color: rgb(0, 0, 0); transform: translate(0, -5vh);"
      >
        <h1>
          VCU
        </h1>
        <h3>
          🎓 Philosophy
        </h3>
      </div>
      <div
        class="main-menu"
      >
        <img
          alt="About Me"
          class="menu-icon"
          src="/avatar.jpg"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="VCU"
          class="menu-icon"
          src="/vcu.png"
          style="opacity: 1; cursor: grab; z-index: 1; transform: translate(0, -5vh); box-shadow: 0 0 0vh 0vh black;"
        />
        <img
          alt="Sage"
          class="menu-icon"
          src="/sage.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="Pivotal"
          class="menu-icon"
          src="/pivotal.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="VMware"
          class="menu-icon"
          src="/vmware.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
      </div>
      <div
        class="social-media"
      >
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="twitter"
            class="social-icon"
            href="https://www.twitter.com/majidrazvi"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #00aced;"
                >
                  <path
                    d="M0,0v64h64V0H0z M44.7,25.5c0,0.3,0,0.6,0,0.8C44.7,35,38.1,45,26.1,45c-3.7,0-7.2-1.1-10.1-2.9 c0.5,0.1,1,0.1,1.6,0.1c3.1,0,5.9-1,8.2-2.8c-2.9-0.1-5.3-2-6.1-4.6c0.4,0.1,0.8,0.1,1.2,0.1c0.6,0,1.2-0.1,1.7-0.2 c-3-0.6-5.3-3.3-5.3-6.4c0,0,0-0.1,0-0.1c0.9,0.5,1.9,0.8,3,0.8c-1.8-1.2-2.9-3.2-2.9-5.5c0-1.2,0.3-2.3,0.9-3.3 c3.2,4,8.1,6.6,13.5,6.9c-0.1-0.5-0.2-1-0.2-1.5c0-3.6,2.9-6.6,6.6-6.6c1.9,0,3.6,0.8,4.8,2.1c1.5-0.3,2.9-0.8,4.2-1.6 c-0.5,1.5-1.5,2.8-2.9,3.6c1.3-0.2,2.6-0.5,3.8-1C47.1,23.4,46,24.5,44.7,25.5z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="linkedin"
            class="social-icon"
            href="https://www.linkedin.com/in/majidrazvi"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M20.4,44h5.4V26.6h-5.4V44z M23.1,18c-1.7,0-3.1,1.4-3.1,3.1c0,1.7,1.4,3.1,3.1,3.1 c1.7,0,3.1-1.4,3.1-3.1C26.2,19.4,24.8,18,23.1,18z M39.5,26.2c-2.6,0-4.4,1.4-5.1,2.8h-0.1v-2.4h-5.2V44h5.4v-8.6 c0-2.3,0.4-4.5,3.2-4.5c2.8,0,2.8,2.6,2.8,4.6V44H46v-9.5C46,29.8,45,26.2,39.5,26.2z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #007fb1;"
                >
                  <path
                    d="M0,0v64h64V0H0z M25.8,44h-5.4V26.6h5.4V44z M23.1,24.3c-1.7,0-3.1-1.4-3.1-3.1c0-1.7,1.4-3.1,3.1-3.1 c1.7,0,3.1,1.4,3.1,3.1C26.2,22.9,24.8,24.3,23.1,24.3z M46,44h-5.4v-8.4c0-2,0-4.6-2.8-4.6c-2.8,0-3.2,2.2-3.2,4.5V44h-5.4V26.6 h5.2V29h0.1c0.7-1.4,2.5-2.8,5.1-2.8c5.5,0,6.5,3.6,6.5,8.3V44z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="github"
            class="social-icon"
            href="https://github.com/majidmade/majidmade.com/tree/master/src"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M32,16c-8.8,0-16,7.2-16,16c0,7.1,4.6,13.1,10.9,15.2 c0.8,0.1,1.1-0.3,1.1-0.8c0-0.4,0-1.4,0-2.7c-4.5,1-5.4-2.1-5.4-2.1c-0.7-1.8-1.8-2.3-1.8-2.3c-1.5-1,0.1-1,0.1-1 c1.6,0.1,2.5,1.6,2.5,1.6c1.4,2.4,3.7,1.7,4.7,1.3c0.1-1,0.6-1.7,1-2.1c-3.6-0.4-7.3-1.8-7.3-7.9c0-1.7,0.6-3.2,1.6-4.3 c-0.2-0.4-0.7-2,0.2-4.2c0,0,1.3-0.4,4.4,1.6c1.3-0.4,2.6-0.5,4-0.5c1.4,0,2.7,0.2,4,0.5c3.1-2.1,4.4-1.6,4.4-1.6 c0.9,2.2,0.3,3.8,0.2,4.2c1,1.1,1.6,2.5,1.6,4.3c0,6.1-3.7,7.5-7.3,7.9c0.6,0.5,1.1,1.5,1.1,3c0,2.1,0,3.9,0,4.4 c0,0.4,0.3,0.9,1.1,0.8C43.4,45.1,48,39.1,48,32C48,23.2,40.8,16,32,16z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #4183c4;"
                >
                  <path
                    d="M0,0v64h64V0H0z M37.1,47.2c-0.8,0.2-1.1-0.3-1.1-0.8c0-0.5,0-2.3,0-4.4c0-1.5-0.5-2.5-1.1-3 c3.6-0.4,7.3-1.7,7.3-7.9c0-1.7-0.6-3.2-1.6-4.3c0.2-0.4,0.7-2-0.2-4.2c0,0-1.3-0.4-4.4,1.6c-1.3-0.4-2.6-0.5-4-0.5 c-1.4,0-2.7,0.2-4,0.5c-3.1-2.1-4.4-1.6-4.4-1.6c-0.9,2.2-0.3,3.8-0.2,4.2c-1,1.1-1.6,2.5-1.6,4.3c0,6.1,3.7,7.5,7.3,7.9 c-0.5,0.4-0.9,1.1-1,2.1c-0.9,0.4-3.2,1.1-4.7-1.3c0,0-0.8-1.5-2.5-1.6c0,0-1.6,0-0.1,1c0,0,1,0.5,1.8,2.3c0,0,0.9,3.1,5.4,2.1 c0,1.3,0,2.3,0,2.7c0,0.4-0.3,0.9-1.1,0.8C20.6,45.1,16,39.1,16,32c0-8.8,7.2-16,16-16c8.8,0,16,7.2,16,16 C48,39.1,43.4,45.1,37.1,47.2z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the Symbol(VMWARE) page correctly 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="center-column"
    >
      <div
        data-testid="page-background"
        style="position: absolute; z-index: -1; left: 0px; top: 0px; bottom: 0px; right: 0px; background-color: rgb(9, 86, 127);"
      >
        <h1
          style="position: relative; top: 50%; transform: translateY(-50%); text-align: center; opacity: 1;"
        />
      </div>
      <div
        class="active-content"
        style="opacity: 1; color: rgb(255, 255, 255); transform: translate(0, -5vh);"
      >
        <h1>
          VMware
        </h1>
        <h3>
          ☸︎ Engineering Manager
        </h3>
      </div>
      <div
        class="main-menu"
      >
        <img
          alt="About Me"
          class="menu-icon"
          src="/avatar.jpg"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="VCU"
          class="menu-icon"
          src="/vcu.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="Sage"
          class="menu-icon"
          src="/sage.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="Pivotal"
          class="menu-icon"
          src="/pivotal.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="VMware"
          class="menu-icon"
          src="/vmware.png"
          style="opacity: 1; cursor: grab; z-index: 1; transform: translate(0, -5vh); box-shadow: 0 0 0vh 0vh white;"
        />
      </div>
      <div
        class="social-media"
      >
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="twitter"
            class="social-icon"
            href="https://www.twitter.com/majidrazvi"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #00aced;"
                >
                  <path
                    d="M0,0v64h64V0H0z M44.7,25.5c0,0.3,0,0.6,0,0.8C44.7,35,38.1,45,26.1,45c-3.7,0-7.2-1.1-10.1-2.9 c0.5,0.1,1,0.1,1.6,0.1c3.1,0,5.9-1,8.2-2.8c-2.9-0.1-5.3-2-6.1-4.6c0.4,0.1,0.8,0.1,1.2,0.1c0.6,0,1.2-0.1,1.7-0.2 c-3-0.6-5.3-3.3-5.3-6.4c0,0,0-0.1,0-0.1c0.9,0.5,1.9,0.8,3,0.8c-1.8-1.2-2.9-3.2-2.9-5.5c0-1.2,0.3-2.3,0.9-3.3 c3.2,4,8.1,6.6,13.5,6.9c-0.1-0.5-0.2-1-0.2-1.5c0-3.6,2.9-6.6,6.6-6.6c1.9,0,3.6,0.8,4.8,2.1c1.5-0.3,2.9-0.8,4.2-1.6 c-0.5,1.5-1.5,2.8-2.9,3.6c1.3-0.2,2.6-0.5,3.8-1C47.1,23.4,46,24.5,44.7,25.5z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="linkedin"
            class="social-icon"
            href="https://www.linkedin.com/in/majidrazvi"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M20.4,44h5.4V26.6h-5.4V44z M23.1,18c-1.7,0-3.1,1.4-3.1,3.1c0,1.7,1.4,3.1,3.1,3.1 c1.7,0,3.1-1.4,3.1-3.1C26.2,19.4,24.8,18,23.1,18z M39.5,26.2c-2.6,0-4.4,1.4-5.1,2.8h-0.1v-2.4h-5.2V44h5.4v-8.6 c0-2.3,0.4-4.5,3.2-4.5c2.8,0,2.8,2.6,2.8,4.6V44H46v-9.5C46,29.8,45,26.2,39.5,26.2z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #007fb1;"
                >
                  <path
                    d="M0,0v64h64V0H0z M25.8,44h-5.4V26.6h5.4V44z M23.1,24.3c-1.7,0-3.1-1.4-3.1-3.1c0-1.7,1.4-3.1,3.1-3.1 c1.7,0,3.1,1.4,3.1,3.1C26.2,22.9,24.8,24.3,23.1,24.3z M46,44h-5.4v-8.4c0-2,0-4.6-2.8-4.6c-2.8,0-3.2,2.2-3.2,4.5V44h-5.4V26.6 h5.2V29h0.1c0.7-1.4,2.5-2.8,5.1-2.8c5.5,0,6.5,3.6,6.5,8.3V44z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="github"
            class="social-icon"
            href="https://github.com/majidmade/majidmade.com/tree/master/src"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M32,16c-8.8,0-16,7.2-16,16c0,7.1,4.6,13.1,10.9,15.2 c0.8,0.1,1.1-0.3,1.1-0.8c0-0.4,0-1.4,0-2.7c-4.5,1-5.4-2.1-5.4-2.1c-0.7-1.8-1.8-2.3-1.8-2.3c-1.5-1,0.1-1,0.1-1 c1.6,0.1,2.5,1.6,2.5,1.6c1.4,2.4,3.7,1.7,4.7,1.3c0.1-1,0.6-1.7,1-2.1c-3.6-0.4-7.3-1.8-7.3-7.9c0-1.7,0.6-3.2,1.6-4.3 c-0.2-0.4-0.7-2,0.2-4.2c0,0,1.3-0.4,4.4,1.6c1.3-0.4,2.6-0.5,4-0.5c1.4,0,2.7,0.2,4,0.5c3.1-2.1,4.4-1.6,4.4-1.6 c0.9,2.2,0.3,3.8,0.2,4.2c1,1.1,1.6,2.5,1.6,4.3c0,6.1-3.7,7.5-7.3,7.9c0.6,0.5,1.1,1.5,1.1,3c0,2.1,0,3.9,0,4.4 c0,0.4,0.3,0.9,1.1,0.8C43.4,45.1,48,39.1,48,32C48,23.2,40.8,16,32,16z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #4183c4;"
                >
                  <path
                    d="M0,0v64h64V0H0z M37.1,47.2c-0.8,0.2-1.1-0.3-1.1-0.8c0-0.5,0-2.3,0-4.4c0-1.5-0.5-2.5-1.1-3 c3.6-0.4,7.3-1.7,7.3-7.9c0-1.7-0.6-3.2-1.6-4.3c0.2-0.4,0.7-2-0.2-4.2c0,0-1.3-0.4-4.4,1.6c-1.3-0.4-2.6-0.5-4-0.5 c-1.4,0-2.7,0.2-4,0.5c-3.1-2.1-4.4-1.6-4.4-1.6c-0.9,2.2-0.3,3.8-0.2,4.2c-1,1.1-1.6,2.5-1.6,4.3c0,6.1,3.7,7.5,7.3,7.9 c-0.5,0.4-0.9,1.1-1,2.1c-0.9,0.4-3.2,1.1-4.7-1.3c0,0-0.8-1.5-2.5-1.6c0,0-1.6,0-0.1,1c0,0,1,0.5,1.8,2.3c0,0,0.9,3.1,5.4,2.1 c0,1.3,0,2.3,0,2.7c0,0.4-0.3,0.9-1.1,0.8C20.6,45.1,16,39.1,16,32c0-8.8,7.2-16,16-16c8.8,0,16,7.2,16,16 C48,39.1,43.4,45.1,37.1,47.2z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the home page correctly 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="center-column"
    >
      <div
        data-testid="page-background"
        style="position: absolute; z-index: -1; left: 0px; top: 0px; bottom: 0px; right: 0px; background-color: rgb(255, 255, 255);"
      >
        <h1
          style="position: relative; top: 50%; transform: translateY(-50%); text-align: center; opacity: 0;"
        >
          hi
        </h1>
      </div>
      <div
        class="active-content"
        style="opacity: 1; color: rgb(0, 0, 0); transform: translate(0, -5vh);"
      >
        <h1 />
        <h3 />
      </div>
      <div
        class="main-menu"
      >
        <img
          alt="About Me"
          class="menu-icon"
          src="/avatar.jpg"
          style="opacity: 0; cursor: grab; z-index: 0; transform: translate(0, -10vh);"
        />
        <img
          alt="VCU"
          class="menu-icon"
          src="/vcu.png"
          style="opacity: 0; cursor: grab; z-index: 0; transform: translate(0, -10vh);"
        />
        <img
          alt="Sage"
          class="menu-icon"
          src="/sage.png"
          style="opacity: 0; cursor: grab; z-index: 0; transform: translate(0, -10vh);"
        />
        <img
          alt="Pivotal"
          class="menu-icon"
          src="/pivotal.png"
          style="opacity: 0; cursor: grab; z-index: 0; transform: translate(0, -10vh);"
        />
        <img
          alt="VMware"
          class="menu-icon"
          src="/vmware.png"
          style="opacity: 0; cursor: grab; z-index: 0; transform: translate(0, -10vh);"
        />
      </div>
      <div
        class="social-media"
      >
        <span
          class="social-media-icon"
          style="opacity: 0; transform: translate(0, -10vh);"
        >
          <a
            aria-label="twitter"
            class="social-icon"
            href="https://www.twitter.com/majidrazvi"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #00aced;"
                >
                  <path
                    d="M0,0v64h64V0H0z M44.7,25.5c0,0.3,0,0.6,0,0.8C44.7,35,38.1,45,26.1,45c-3.7,0-7.2-1.1-10.1-2.9 c0.5,0.1,1,0.1,1.6,0.1c3.1,0,5.9-1,8.2-2.8c-2.9-0.1-5.3-2-6.1-4.6c0.4,0.1,0.8,0.1,1.2,0.1c0.6,0,1.2-0.1,1.7-0.2 c-3-0.6-5.3-3.3-5.3-6.4c0,0,0-0.1,0-0.1c0.9,0.5,1.9,0.8,3,0.8c-1.8-1.2-2.9-3.2-2.9-5.5c0-1.2,0.3-2.3,0.9-3.3 c3.2,4,8.1,6.6,13.5,6.9c-0.1-0.5-0.2-1-0.2-1.5c0-3.6,2.9-6.6,6.6-6.6c1.9,0,3.6,0.8,4.8,2.1c1.5-0.3,2.9-0.8,4.2-1.6 c-0.5,1.5-1.5,2.8-2.9,3.6c1.3-0.2,2.6-0.5,3.8-1C47.1,23.4,46,24.5,44.7,25.5z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
        <span
          class="social-media-icon"
          style="opacity: 0; transform: translate(0, -10vh);"
        >
          <a
            aria-label="linkedin"
            class="social-icon"
            href="https://www.linkedin.com/in/majidrazvi"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M20.4,44h5.4V26.6h-5.4V44z M23.1,18c-1.7,0-3.1,1.4-3.1,3.1c0,1.7,1.4,3.1,3.1,3.1 c1.7,0,3.1-1.4,3.1-3.1C26.2,19.4,24.8,18,23.1,18z M39.5,26.2c-2.6,0-4.4,1.4-5.1,2.8h-0.1v-2.4h-5.2V44h5.4v-8.6 c0-2.3,0.4-4.5,3.2-4.5c2.8,0,2.8,2.6,2.8,4.6V44H46v-9.5C46,29.8,45,26.2,39.5,26.2z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #007fb1;"
                >
                  <path
                    d="M0,0v64h64V0H0z M25.8,44h-5.4V26.6h5.4V44z M23.1,24.3c-1.7,0-3.1-1.4-3.1-3.1c0-1.7,1.4-3.1,3.1-3.1 c1.7,0,3.1,1.4,3.1,3.1C26.2,22.9,24.8,24.3,23.1,24.3z M46,44h-5.4v-8.4c0-2,0-4.6-2.8-4.6c-2.8,0-3.2,2.2-3.2,4.5V44h-5.4V26.6 h5.2V29h0.1c0.7-1.4,2.5-2.8,5.1-2.8c5.5,0,6.5,3.6,6.5,8.3V44z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
        <span
          class="social-media-icon"
          style="opacity: 0; transform: translate(0, -10vh);"
        >
          <a
            aria-label="github"
            class="social-icon"
            href="https://github.com/majidmade/majidmade.com/tree/master/src"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M32,16c-8.8,0-16,7.2-16,16c0,7.1,4.6,13.1,10.9,15.2 c0.8,0.1,1.1-0.3,1.1-0.8c0-0.4,0-1.4,0-2.7c-4.5,1-5.4-2.1-5.4-2.1c-0.7-1.8-1.8-2.3-1.8-2.3c-1.5-1,0.1-1,0.1-1 c1.6,0.1,2.5,1.6,2.5,1.6c1.4,2.4,3.7,1.7,4.7,1.3c0.1-1,0.6-1.7,1-2.1c-3.6-0.4-7.3-1.8-7.3-7.9c0-1.7,0.6-3.2,1.6-4.3 c-0.2-0.4-0.7-2,0.2-4.2c0,0,1.3-0.4,4.4,1.6c1.3-0.4,2.6-0.5,4-0.5c1.4,0,2.7,0.2,4,0.5c3.1-2.1,4.4-1.6,4.4-1.6 c0.9,2.2,0.3,3.8,0.2,4.2c1,1.1,1.6,2.5,1.6,4.3c0,6.1-3.7,7.5-7.3,7.9c0.6,0.5,1.1,1.5,1.1,3c0,2.1,0,3.9,0,4.4 c0,0.4,0.3,0.9,1.1,0.8C43.4,45.1,48,39.1,48,32C48,23.2,40.8,16,32,16z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #4183c4;"
                >
                  <path
                    d="M0,0v64h64V0H0z M37.1,47.2c-0.8,0.2-1.1-0.3-1.1-0.8c0-0.5,0-2.3,0-4.4c0-1.5-0.5-2.5-1.1-3 c3.6-0.4,7.3-1.7,7.3-7.9c0-1.7-0.6-3.2-1.6-4.3c0.2-0.4,0.7-2-0.2-4.2c0,0-1.3-0.4-4.4,1.6c-1.3-0.4-2.6-0.5-4-0.5 c-1.4,0-2.7,0.2-4,0.5c-3.1-2.1-4.4-1.6-4.4-1.6c-0.9,2.2-0.3,3.8-0.2,4.2c-1,1.1-1.6,2.5-1.6,4.3c0,6.1,3.7,7.5,7.3,7.9 c-0.5,0.4-0.9,1.1-1,2.1c-0.9,0.4-3.2,1.1-4.7-1.3c0,0-0.8-1.5-2.5-1.6c0,0-1.6,0-0.1,1c0,0,1,0.5,1.8,2.3c0,0,0.9,3.1,5.4,2.1 c0,1.3,0,2.3,0,2.7c0,0.4-0.3,0.9-1.1,0.8C20.6,45.1,16,39.1,16,32c0-8.8,7.2-16,16-16c8.8,0,16,7.2,16,16 C48,39.1,43.4,45.1,37.1,47.2z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the home page correctly 2`] = `
<div>
  <div
    class="App"
  >
    <div
      class="center-column"
    >
      <div
        data-testid="page-background"
        style="position: absolute; z-index: -1; left: 0px; top: 0px; bottom: 0px; right: 0px; background-color: rgb(255, 255, 255);"
      >
        <h1
          style="position: relative; top: 50%; transform: translateY(-50%); text-align: center; opacity: 1;"
        >
          hi
        </h1>
      </div>
      <div
        class="active-content"
        style="opacity: 1; color: rgb(0, 0, 0); transform: translate(0, -5vh);"
      >
        <h1 />
        <h3 />
      </div>
      <div
        class="main-menu"
      >
        <img
          alt="About Me"
          class="menu-icon"
          src="/avatar.jpg"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="VCU"
          class="menu-icon"
          src="/vcu.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="Sage"
          class="menu-icon"
          src="/sage.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="Pivotal"
          class="menu-icon"
          src="/pivotal.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
        <img
          alt="VMware"
          class="menu-icon"
          src="/vmware.png"
          style="opacity: 1; cursor: grab; z-index: 0; transform: translate(0, 0vh);"
        />
      </div>
      <div
        class="social-media"
      >
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="twitter"
            class="social-icon"
            href="https://www.twitter.com/majidrazvi"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #00aced;"
                >
                  <path
                    d="M0,0v64h64V0H0z M44.7,25.5c0,0.3,0,0.6,0,0.8C44.7,35,38.1,45,26.1,45c-3.7,0-7.2-1.1-10.1-2.9 c0.5,0.1,1,0.1,1.6,0.1c3.1,0,5.9-1,8.2-2.8c-2.9-0.1-5.3-2-6.1-4.6c0.4,0.1,0.8,0.1,1.2,0.1c0.6,0,1.2-0.1,1.7-0.2 c-3-0.6-5.3-3.3-5.3-6.4c0,0,0-0.1,0-0.1c0.9,0.5,1.9,0.8,3,0.8c-1.8-1.2-2.9-3.2-2.9-5.5c0-1.2,0.3-2.3,0.9-3.3 c3.2,4,8.1,6.6,13.5,6.9c-0.1-0.5-0.2-1-0.2-1.5c0-3.6,2.9-6.6,6.6-6.6c1.9,0,3.6,0.8,4.8,2.1c1.5-0.3,2.9-0.8,4.2-1.6 c-0.5,1.5-1.5,2.8-2.9,3.6c1.3-0.2,2.6-0.5,3.8-1C47.1,23.4,46,24.5,44.7,25.5z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="linkedin"
            class="social-icon"
            href="https://www.linkedin.com/in/majidrazvi"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M20.4,44h5.4V26.6h-5.4V44z M23.1,18c-1.7,0-3.1,1.4-3.1,3.1c0,1.7,1.4,3.1,3.1,3.1 c1.7,0,3.1-1.4,3.1-3.1C26.2,19.4,24.8,18,23.1,18z M39.5,26.2c-2.6,0-4.4,1.4-5.1,2.8h-0.1v-2.4h-5.2V44h5.4v-8.6 c0-2.3,0.4-4.5,3.2-4.5c2.8,0,2.8,2.6,2.8,4.6V44H46v-9.5C46,29.8,45,26.2,39.5,26.2z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #007fb1;"
                >
                  <path
                    d="M0,0v64h64V0H0z M25.8,44h-5.4V26.6h5.4V44z M23.1,24.3c-1.7,0-3.1-1.4-3.1-3.1c0-1.7,1.4-3.1,3.1-3.1 c1.7,0,3.1,1.4,3.1,3.1C26.2,22.9,24.8,24.3,23.1,24.3z M46,44h-5.4v-8.4c0-2,0-4.6-2.8-4.6c-2.8,0-3.2,2.2-3.2,4.5V44h-5.4V26.6 h5.2V29h0.1c0.7-1.4,2.5-2.8,5.1-2.8c5.5,0,6.5,3.6,6.5,8.3V44z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
        <span
          class="social-media-icon"
          style="opacity: 1; transform: translate(0, 0vh);"
        >
          <a
            aria-label="github"
            class="social-icon"
            href="https://github.com/majidmade/majidmade.com/tree/master/src"
            style="display: inline-block; width: 50px; height: 50px; position: relative; overflow: hidden; vertical-align: middle;"
          >
            <div
              class="social-container"
              style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
            >
              <svg
                class="social-svg"
                style="border-radius: 50%; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; fill-rule: evenodd;"
                viewBox="0 0 64 64"
              >
                <g
                  class="social-svg-background"
                  style="transition: fill 170ms ease-in-out; fill: transparent;"
                >
                  <circle
                    cx="32"
                    cy="32"
                    r="31"
                  />
                </g>
                <g
                  class="social-svg-icon"
                  style="transition: fill 170ms ease-in-out; fill: white;"
                >
                  <path
                    d="M32,16c-8.8,0-16,7.2-16,16c0,7.1,4.6,13.1,10.9,15.2 c0.8,0.1,1.1-0.3,1.1-0.8c0-0.4,0-1.4,0-2.7c-4.5,1-5.4-2.1-5.4-2.1c-0.7-1.8-1.8-2.3-1.8-2.3c-1.5-1,0.1-1,0.1-1 c1.6,0.1,2.5,1.6,2.5,1.6c1.4,2.4,3.7,1.7,4.7,1.3c0.1-1,0.6-1.7,1-2.1c-3.6-0.4-7.3-1.8-7.3-7.9c0-1.7,0.6-3.2,1.6-4.3 c-0.2-0.4-0.7-2,0.2-4.2c0,0,1.3-0.4,4.4,1.6c1.3-0.4,2.6-0.5,4-0.5c1.4,0,2.7,0.2,4,0.5c3.1-2.1,4.4-1.6,4.4-1.6 c0.9,2.2,0.3,3.8,0.2,4.2c1,1.1,1.6,2.5,1.6,4.3c0,6.1-3.7,7.5-7.3,7.9c0.6,0.5,1.1,1.5,1.1,3c0,2.1,0,3.9,0,4.4 c0,0.4,0.3,0.9,1.1,0.8C43.4,45.1,48,39.1,48,32C48,23.2,40.8,16,32,16z"
                  />
                </g>
                <g
                  class="social-svg-mask"
                  style="transition: fill 170ms ease-in-out; fill: #4183c4;"
                >
                  <path
                    d="M0,0v64h64V0H0z M37.1,47.2c-0.8,0.2-1.1-0.3-1.1-0.8c0-0.5,0-2.3,0-4.4c0-1.5-0.5-2.5-1.1-3 c3.6-0.4,7.3-1.7,7.3-7.9c0-1.7-0.6-3.2-1.6-4.3c0.2-0.4,0.7-2-0.2-4.2c0,0-1.3-0.4-4.4,1.6c-1.3-0.4-2.6-0.5-4-0.5 c-1.4,0-2.7,0.2-4,0.5c-3.1-2.1-4.4-1.6-4.4-1.6c-0.9,2.2-0.3,3.8-0.2,4.2c-1,1.1-1.6,2.5-1.6,4.3c0,6.1,3.7,7.5,7.3,7.9 c-0.5,0.4-0.9,1.1-1,2.1c-0.9,0.4-3.2,1.1-4.7-1.3c0,0-0.8-1.5-2.5-1.6c0,0-1.6,0-0.1,1c0,0,1,0.5,1.8,2.3c0,0,0.9,3.1,5.4,2.1 c0,1.3,0,2.3,0,2.7c0,0.4-0.3,0.9-1.1,0.8C20.6,45.1,16,39.1,16,32c0-8.8,7.2-16,16-16c8.8,0,16,7.2,16,16 C48,39.1,43.4,45.1,37.1,47.2z"
                  />
                </g>
              </svg>
            </div>
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;
